[gd_scene load_steps=7 format=3 uid="uid://c6a8peauvuv27"]

[ext_resource type="Script" path="res://scenes/workers/workers.gd" id="1_cau6b"]
[ext_resource type="Script" path="res://scenes/workers/WorkerTemplate.gd" id="2_77udo"]
[ext_resource type="Texture2D" uid="uid://cg8kh60nwckaj" path="res://assets/Bees.png" id="3_0fw7v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oaju6"]
atlas = ExtResource("3_0fw7v")
region = Rect2(0, 0, 550, 550)

[sub_resource type="AtlasTexture" id="AtlasTexture_puyxa"]
atlas = ExtResource("3_0fw7v")
region = Rect2(550, 0, 550, 550)

[sub_resource type="SpriteFrames" id="SpriteFrames_1naep"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oaju6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puyxa")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Workers" type="Node2D"]
script = ExtResource("1_cau6b")

[node name="TargetPointsHolder" type="Node2D" parent="."]

[node name="Target1" type="Node2D" parent="TargetPointsHolder"]
position = Vector2(316, 239)

[node name="Sprite2D" type="Sprite2D" parent="TargetPointsHolder/Target1"]

[node name="Target2" type="Node2D" parent="TargetPointsHolder"]
position = Vector2(199, 320)

[node name="Sprite2D" type="Sprite2D" parent="TargetPointsHolder/Target2"]

[node name="Target3" type="Node2D" parent="TargetPointsHolder"]
position = Vector2(868, 177)

[node name="Sprite2D" type="Sprite2D" parent="TargetPointsHolder/Target3"]

[node name="Target4" type="Node2D" parent="TargetPointsHolder"]
position = Vector2(217, 518)

[node name="Sprite2D" type="Sprite2D" parent="TargetPointsHolder/Target4"]

[node name="Target5" type="Node2D" parent="TargetPointsHolder"]
position = Vector2(374, 575)

[node name="Sprite2D" type="Sprite2D" parent="TargetPointsHolder/Target5"]

[node name="Target6" type="Node2D" parent="TargetPointsHolder"]
position = Vector2(832, 517)

[node name="Sprite2D" type="Sprite2D" parent="TargetPointsHolder/Target6"]

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2(584, 321)

[node name="TargetPointTemplate" type="Node2D" parent="."]

[node name="WorkerTemplate" type="Node2D" parent="."]
visible = false
position = Vector2(143, 92)
script = ExtResource("2_77udo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="WorkerTemplate"]
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_1naep")
